--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -50,6 +50,7 @@ ul{
   padding-left: 20px; /* 3 */
   padding-right: 20px; /* 3 */
   width: 100%; /* 1 */
+  overflow: hidden;
 
   &.container-body{
     min-height: 100vh ;
@@ -67,6 +68,10 @@ ul{
     &.blue{
       background-color: $blue;
     }
+  }
+  @media(max-width: 400px){
+    padding-left: 16px;
+    padding-right: 16px;
   }
  }
 
