--- a/app/sass/pages/_plan_destinasi.scss
+++ b/app/sass/pages/_plan_destinasi.scss
@@ -20,11 +20,53 @@
        text-transform: uppercase;
      }
      .value{
+       position: relative;
        font-size: 24px;
        line-height: 1;
        color: #3d3d3d;
        text-transform: capitalize;
      }
+     @media(max-width: 768px){
+      margin-right: 30px;
+     }
+     @media(max-width: 650px){
+        margin-right: 7px;
+        .label{
+          display: none;
+        }
+        .value{
+          font-size: 16px;
+          &:after{
+            content: '\00B7';
+            display: inline-block;
+            position: relative;
+            top: 1px;
+            margin-left: 8px;
+            font-size: 24px;
+            font-weight: bold;
+          }
+        }
+        &:last-child{
+          .value{
+            &:after{
+              content: none;
+            }
+          }
+        }
+      }
+      @media(max-width: 400px){
+        margin-right: 0;
+        margin-top: -3px;
+        .value{
+          font-size: 14px;
+          &:after{
+            margin-left: 0;
+          }
+        }
+        &:last-child{
+          margin-top: -1px;
+        }
+      }
    }
    .plan-destinasi-board-action{
      position: absolute;
