--- a/app/views/recomended_plan.html
+++ b/app/views/recomended_plan.html
@@ -1,39 +1,143 @@
 <div class="container container--full grey">
-	<div class="plan-destinasi-board">
-	    <div class="container">
-	      <div class="plan-destinasi-boardbox-container">
-	        <div class="plan-destinasi-board-box">
-	          <div class="label">
-	            kota
-	          </div>
-	          <div class="value">
-	            bandung
-	          </div>
-	        </div>
-	        <div class="plan-destinasi-board-box">
-	          <div class="label">
-	            tanggal
-	          </div>
-	          <div class="value">
-	            21 April - 23 April
-	          </div>
-	        </div>
-	        <div class="plan-destinasi-board-box">
-	          <div class="label">
-	            peserta
-	          </div>
-	          <div class="value">
-	            2 Orang
-	          </div>
-	        </div>
-	      </div>
-	      <div class="plan-destinasi-board-action">
-	        ubah
-	      </div>
-	    </div>
-	</div>
-	<div class="container container-body rp">
-		<div class="rp__filter">
+	<div class="modal-pd-head rp__filter">
+      <div class="modal-pd-head-top container">
+        <div class="modal-pd-description">
+          <div class="modal-pd-desc-label">
+            Rekomendasi
+          </div>
+        </div>
+        <div class="modal-pd-filter">
+          <ul class="modal-pd-filter-inner">
+              <li class="mpd-child js-open-filter"><p>FILTER</p><img src="images/icon/ic-filter.svg" alt="filter icon" class="svg-image"></li>
+              <li class="mpd-child"><p>SORT</p><img src="images/icon/ic-sort.svg" alt="sort icon" class="svg-image"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="modal-filter-body ">
+        <div class="container">
+          <div class="modal-primary-filter">
+            <div class="filter-menu">
+              <div class="filter-menu-box active">
+                <div class="fmb-inner">
+                  <div class="fmb-img">
+                    <img class="svg-image" src="./images/icon/ic-briefcase.svg" alt="icon briefcase">
+                  </div>
+                  <div class="fmb-label">
+                    <span>KATEGORI</span>
+                  </div>
+                </div>
+              </div>
+              <div class="filter-menu-box">
+                <div class="fmb-inner">
+                  <div class="fmb-img">
+                    <img class="svg-image" src="./images/icon/ic-coin.svg" alt="icon briefcase">
+                  </div>
+                  <div class="fmb-label">
+                    <span>HARGA</span>
+                  </div>
+                </div>
+              </div>
+              <div class="filter-menu-box">
+                <div class="fmb-inner">
+                  <div class="fmb-img">
+                    <img class="svg-image" src="./images/icon/ic-pricetag.svg" alt="icon briefcase">
+                  </div>
+                  <div class="fmb-label">
+                    <span>TAG</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="filter-reset">
+              <button class="btn small"><i class="fa fa-refresh" aria-hidden="true"></i>Reset</button>
+            </div>
+          </div>
+          <div class="modal-child-filter">
+
+            <div class="mcf-action active  row">
+
+                <div class="checkbox-area col-md-2">
+                  <input type="checkbox" name="kategori" id="semua" data-parsley-multiple="kategori" data-parsley-id="46">
+                  <label for="semua" class="">Semua</label>
+                </div>
+
+                <div class="checkbox-area col-md-2">
+                  <input type="checkbox" name="kategori" id="atraksi" data-parsley-multiple="kategori" data-parsley-id="46">
+                  <label for="atraksi" class="">Atraksi</label>
+                </div>
+
+                <div class="checkbox-area col-md-2">
+                  <input type="checkbox" name="kategori" id="resto" data-parsley-multiple="kategori" data-parsley-id="46">
+                  <label for="resto" class="">Resto</label>
+                </div>
+
+
+            </div>
+
+            <div class="mcf-action row ">
+
+              <div class="form-group col-md-2">
+                <label for="">Minimum</label>
+                <div class="input-group">
+                  <input id="input-with-keypress-0" type="text" placeholder="Placeholder">
+                </div>
+              </div>
+
+              <div class="slider-group col-md-8">
+                <div class="middle-v">
+                  <div id="keypress">
+
+                  </div>
+                </div>
+              </div>
+
+            <div class="form-group col-md-2">
+              <label for="">Maksimum</label>
+              <div class="input-group">
+                <input id="input-with-keypress-1" type="text" placeholder="Placeholder">
+              </div>
+            </div>
+
+            </div>
+
+            <div class="mcf-action row">
+
+                <div class="checkbox-area col-md-2">
+                  <input type="checkbox" name="kategori" id="semua" data-parsley-multiple="kategori" data-parsley-id="46">
+                  <label for="semua" class="">Semua</label>
+                </div>
+
+                <div class="checkbox-area col-md-2">
+                  <input type="checkbox" name="kategori" id="atraksi" data-parsley-multiple="kategori" data-parsley-id="46">
+                  <label for="atraksi" class="">Keluarga</label>
+                </div>
+
+                <div class="checkbox-area col-md-2">
+                  <input type="checkbox" name="kategori" id="resto" data-parsley-multiple="kategori" data-parsley-id="46">
+                  <label for="resto" class="">Outdoor</label>
+                </div>
+
+                <div class="checkbox-area col-md-2">
+                  <input type="checkbox" name="kategori" id="resto" data-parsley-multiple="kategori" data-parsley-id="46">
+                  <label for="resto" class="">Kuliner</label>
+                </div>
+
+
+            </div>
+
+          </div>
+          <div class="modal-filter-footer">
+            <div class="container">
+              <div class="close-filter js-close-filter">
+                <p>Tutup Filter</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+	<div class="container container-body">
+		<!-- <div class="rp__filter">
 			<div class="row">
 				<div class="rp__title col-md-6">
 					<h3>Rekomendasi</h3>
@@ -61,7 +165,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="rp__wrapper">
 			<div class="rp__wrap row">
 				<div class="rp__content col-md-6">
@@ -85,16 +189,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
@@ -124,16 +232,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
@@ -163,16 +275,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
@@ -202,16 +318,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
@@ -241,16 +361,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
@@ -280,16 +404,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
@@ -319,16 +447,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
@@ -358,16 +490,20 @@
 	    					<div class="swiper-pagination home-pagination card-pagination"></div>
 						</div>
 						<div class="card__location row">
-							<div class="card__map col-md-4">
+							<div class="card__map col-4">
 								<div id="map" class="pd-maps-box maps"></div>
 							</div>
-							<div class="card__infowrap col-md-8">
+							<div class="card__infowrap col-8">
 								<h5>Petualangan di raja ampat</h5>
 								<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 								<div class="card__info">
 									<span class="fa fa-map-marker"></span>
 									<p>Sulawesi Selatan</p>
 								</div>
+							</div>
+							<div class="card__info card__info--mobile col-12">
+								<span class="fa fa-map-marker"></span>
+								<p>Sulawesi Selatan</p>
 							</div>
 						</div>
 						<div class="card__pricewrap relative">
