--- a/app/views/home.html
+++ b/app/views/home.html
@@ -256,6 +256,9 @@
 						</div>
 					</div>
 				</div>
+				<div class="home-gridview__button">	
+					<button class="btn btn--medium">LIHAT LEBIH BANYAK</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -289,16 +292,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -328,16 +335,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -367,16 +378,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -406,16 +421,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -445,16 +464,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -484,16 +507,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -523,16 +550,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -562,16 +593,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -601,16 +636,20 @@
 		    					<div class="swiper-pagination home-pagination card-pagination"></div>
 							</div>
 							<div class="card__location row">
-								<div class="card__map col-md-4">
+								<div class="card__map col-4">
 									<div id="map" class="pd-maps-box maps"></div>
 								</div>
-								<div class="card__infowrap col-md-8">
+								<div class="card__infowrap col-8">
 									<h5>Petualangan di raja ampat</h5>
 									<p class="card__desc">Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.</p>
 									<div class="card__info">
 										<span class="fa fa-map-marker"></span>
 										<p>Sulawesi Selatan</p>
 									</div>
+								</div>
+								<div class="card__info card__info--mobile col-12">
+									<span class="fa fa-map-marker"></span>
+									<p>Sulawesi Selatan</p>
 								</div>
 							</div>
 							<div class="card__pricewrap relative">
@@ -632,7 +671,7 @@
 	</div>
 	<!-- slider section -->
 	<div class="home-wrapper">
-		<div class="container">
+		<div class="container overflow_visible">
 			<h1 class="home-wrapper__title">How It Works</h1>
 			<!-- efek slider masukkan disini -->
 			<div class="home-slider">
